Updated README known issues